--- a/unidad4.tarea/package.json
+++ b/unidad4.tarea/package.json
@@ -8,11 +8,16 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.4",
     "express": "~4.16.1",
-    "express-session": "^1.18.2",
+    "express-session": "^1.19.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mariadb": "^3.4.5",
+    "md5": "^2.3.0",
     "morgan": "~1.9.1",
-    "nodemon": "^3.1.11"
+    "mysql2": "^3.16.3",
+    "nodemon": "^3.1.11",
+    "util": "^0.12.5"
   }
 }
